# SQLAgent

./: output.txt  pyproject.toml  requirements.txt
src/sql_agent/: crew.py  main.py
src/sql_agent/config/: agents.yaml  tasks.yaml
