[project]
name = "sql_agent"
version = "0.1.0"
description = "sql_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
sql_agent = "sql_agent.main:run"
run_crew = "sql_agent.main:run"
train = "sql_agent.main:train"
replay = "sql_agent.main:replay"
test = "sql_agent.main:test"
run_with_trigger = "sql_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
